RESOLVED FIXED309127
AX: Fix crashes and null-dereferences with ENABLE(ACCESSIBILITY_LOCAL_FRAME)
https://bugs.webkit.org/show_bug.cgi?id=309127
Summary AX: Fix crashes and null-dereferences with ENABLE(ACCESSIBILITY_LOCAL_FRAME)
Tyler Wilcock
Reported 2026-03-03 17:23:37 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-03 17:23:43 PST
Tyler Wilcock
Comment 2 2026-03-03 17:28:46 PST
EWS
Comment 3 2026-03-04 11:06:48 PST
Committed 308645@main (d0dcddea0dd7): <https://commits.webkit.org/308645@main> Reviewed commits have been landed. Closing PR #59851 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.